--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,8 @@
 					<!-- <li><a href="#"><i class="icon-twitter2"></i></a></li> -->
 					
 					<li><a href="https://github.com/kyusangHwang0912/">Github<i class="fa-brands fa-git-square"></i></a></li>
-					<li><a href="https://www.instagram.com/{{ site.instagram_id }}">Instagram<i class="icon-instagram"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/{{ site.linkedin_id }}/">Instagram<i class="icon-linkedin"></i></a></li>
+					<!-- <li><a href="https://www.instagram.com/{{ site.instagram_id }}">Instagram<i class="icon-instagram"></i></a></li> -->
 					
 				</ul>
 			</div>
