--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
 						<li><a href="#" data-nav-section="skills">Tech Skills</a></li>
 						<li><a href="#" data-nav-section="work">Project</a></li>
 						<li><a href="#" data-nav-section="services">Experience</a></li>
-						<li><a href="#" data-nav-section="experience">Activies</a></li>
+						<li><a href="#" data-nav-section="experience">Career & Activities</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="blog">Blog</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
@@ -91,7 +91,7 @@
 					<!-- <li><a href="#"><i class="icon-twitter2"></i></a></li> -->
 					
 					<li><a href="https://github.com/kyusangHwang0912/">Github<i class="fa-brands fa-git-square"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/{{ site.linkedin_id }}/">Instagram<i class="icon-linkedin"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/{{ site.linkedin_id }}/">LinkedIn<i class="bi bi-linkedin"></i></a></li>
 					<!-- <li><a href="https://www.instagram.com/{{ site.instagram_id }}">Instagram<i class="icon-instagram"></i></a></li> -->
 					
 				</ul>
