edit 순서, 내용 - 20250221

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,11 +74,11 @@
 				<div id="navbar" class="collapse">
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
-						<li><a href="#" data-nav-section="about">About</a></li>
+						<li><a href="#" data-nav-section="services">About me</a></li>
 						<li><a href="#" data-nav-section="skills">Tech Skills</a></li>
 						<li><a href="#" data-nav-section="work">Project</a></li>
-						<li><a href="#" data-nav-section="services">Experience</a></li>
 						<li><a href="#" data-nav-section="experience">Career & Activities</a></li>
+						<li><a href="#" data-nav-section="about">Certificate</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="blog">Blog</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
@@ -140,45 +140,34 @@
 			  	</div>
 			</section>
 
+
 			<!-- About -->	
-			<section class="colorlib-about" data-section="about">
+			<section class="colorlib-services" data-section="services">
 				<div class="colorlib-narrow-content">
 					<div class="row">
-						<div class="col-md-12">
-							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
-								<div class="col-md-12">
-									<div class="about-desc">
-										<span class="heading-meta">{{ site.about_meta }}</span>
-										<h2 class="colorlib-heading">{{ site.about_header }}</h2>
-										<p><strong>{{ site.about_introduce }}</strong></p> 
-										<p>{{ site.about_content }}</p>
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-									<div class="services color-1">
-										<span class="icon2"><i class="{{ site.about_services[0].icon | default: 'icon-data' }}"></i></span>
-										<h3>{{ site.about_services[0].name }}</h3>
-									</div>
-									
-								</div>
-								<div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
-									<div class="services color-2">
-										<span class="icon2"><i class="{{ site.about_services[1].icon | default: 'icon-data' }}"></i></span>
-										<h3>{{ site.about_services[1].name }}</h3>
-									</div>
-								</div>
-								<div class="col-md-4 animate-box" data-animate-effect="fadeInTop">
-									<div class="services color-3">
-										<span class="icon2"><i class="{{ site.about_services[2].icon | default: 'icon-data' }}"></i></span>
-										<h3>{{ site.about_services[2].name }}</h3>
-									</div>
-
-								</div>
-							</div>
-
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">{{ site.exp_meta }}</span>
+							<h2 class="colorlib-heading">{{ site.exp_header }}</h2>
 						</div>
+					</div>
+					<div class="animate-box" data-animate-effect="fadeInTop">
+						<p><strong>{{ site.exp_content}}</strong></p>
+					</div>
+
+					<div class="row row-pt-md">
+						{% for service in site.exp_services %}
+							<div class="col-md-4 text-center animate-box">
+								<div class="services {{ service.color }}">
+									<span class="icon">
+										<i class="{{ service.icon }}"></i>
+									</span>
+									<div class="desc">
+										<h3>{{ service.name }}</h3>
+										<p>{{ service.content }}</p>
+									</div>
+								</div>
+							</div>
+                        {% endfor %}
 					</div>
 				</div>
 			</section>
@@ -319,37 +308,6 @@
 					</div>
 				</div>
 			</section>
-
-			<!-- Experience -->	
-			<section class="colorlib-services" data-section="services">
-				<div class="colorlib-narrow-content">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">{{ site.exp_meta }}</span>
-							<h2 class="colorlib-heading">{{ site.exp_header }}</h2>
-						</div>
-					</div>
-					<div class="animate-box" data-animate-effect="fadeInTop">
-						<p><strong>{{ site.exp_content}}</strong></p>
-					</div>
-
-					<div class="row row-pt-md">
-						{% for service in site.exp_services %}
-							<div class="col-md-4 text-center animate-box">
-								<div class="services {{ service.color }}">
-									<span class="icon">
-										<i class="{{ service.icon }}"></i>
-									</span>
-									<div class="desc">
-										<h3>{{ service.name }}</h3>
-										<p>{{ service.content }}</p>
-									</div>
-								</div>
-							</div>
-                        {% endfor %}
-					</div>
-				</div>
-			</section>
 			
 			<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/cover_bg_5.jpeg);" data-stellar-background-ratio="0.5">
 				<div class="overlay"></div>
@@ -460,6 +418,50 @@
 
 								</div>
 							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+			<!-- Ceritificate -->	
+			<section class="colorlib-about" data-section="about">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+								<div class="col-md-12">
+									<div class="about-desc">
+										<span class="heading-meta">{{ site.about_meta }}</span>
+										<h2 class="colorlib-heading">{{ site.about_header }}</h2>
+										<p><strong>{{ site.about_introduce }}</strong></p> 
+										<p>{{ site.about_content }}</p>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
+									<div class="services color-1">
+										<span class="icon2"><i class="{{ site.about_services[0].icon | default: 'icon-data' }}"></i></span>
+										<h3>{{ site.about_services[0].name }}</h3>
+									</div>
+									
+								</div>
+								<div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
+									<div class="services color-2">
+										<span class="icon2"><i class="{{ site.about_services[1].icon | default: 'icon-data' }}"></i></span>
+										<h3>{{ site.about_services[1].name }}</h3>
+									</div>
+								</div>
+								<div class="col-md-4 animate-box" data-animate-effect="fadeInTop">
+									<div class="services color-3">
+										<span class="icon2"><i class="{{ site.about_services[2].icon | default: 'icon-data' }}"></i></span>
+										<h3>{{ site.about_services[2].name }}</h3>
+									</div>
+
+								</div>
+							</div>
+
 						</div>
 					</div>
 				</div>
